--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 GUI Edition/window2.py
 GUI Edition/test.py
 GUI Edition/regenerative_check.xlsx
+GUI Edition/__pycache__/window.cpython-35.pyc
+GUI Edition/__pycache__/functions.cpython-35.pyc
+GUI Edition/plan_functions.py
+GUI Edition/plan_functions.py
