Added additional file to ignore.

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 GUI Edition/window2.py
 GUI Edition/test.py
+GUI Edition/test2.py
 GUI Edition/regenerative_check.xlsx
 GUI Edition/__pycache__/window.cpython-35.pyc
 GUI Edition/__pycache__/functions.cpython-35.pyc
